--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,10 @@
+.pokemon-list-container {
+  border-right: 1px double black;
+  width: 520px;
+}
+
 .pokemon-container {
-  margin: 5px;
+  margin: 10px 5px;
   display: -webkit-flex;
   display: flex;
   flex-direction: column;
@@ -21,6 +26,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  align-items: baseline;
   padding: 5px;
   border-radius: 5px;
   border: 1px dashed black;
@@ -45,7 +51,7 @@
 .empty {
   width: 35px;
 }
-.evolutions {
+.evolution {
   display: flex;
   justify-content: center;
   padding: 5px;
