--- a/public/styles.css
+++ b/public/styles.css
@@ -1,10 +1,21 @@
+.main-container {
+  display: flex;
+}
+
 .pokemon-list-container {
   border-right: 1px double black;
-  width: 520px;
+  width: 550px;
+}
+
+.team-list-container {
+  width: 550px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .pokemon-container {
-  margin: 10px 5px;
+  margin: 20px 20px;
   display: -webkit-flex;
   display: flex;
   flex-direction: column;
@@ -14,8 +25,13 @@
   border-radius: 10px;
   width: 500px;
   height: 200px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: all 0.2s ease-in-out;
 }
 
+.pokemon-container:hover {
+  transform: scale(1.1);
+}
 .name-number-image {
   display: flex;
   justify-content: space-around;
